@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="product"/>
+    <field name="product"/>
+    <newline/>
+    <label name="quantity_resulting"/>
+    <field name="quantity_resulting"/>
+    <label name="uom"/>
+    <field name="uom"/>
+    <label name="quantity_added"/>
+    <field name="quantity_added"/>
+    <field name="line" colspan="-1" invisible="1"/>
+</form>
